manifests/base/microservices/rabbitmq/rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: sock-shop
  labels:
    name: rabbitmq
spec:
  serviceName: "rabbitmq"
  replicas: 2
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
      annotations:
        prometheus.io/scrape: "false"
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: rabbitmq
          image: quay.io/powercloud/rabbitmq:latest
          imagePullPolicy: IfNotPresent
          command: ["/usr/bin/bash"]
          args: ["/usr/local/bin/docker-entrypoint.sh", "rabbitmq-server"]
          ports:
            - containerPort: 15672
              name: management
            - containerPort: 5672
              name: rabbitmq
          securityContext:
            runAsUser: 999
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
        - name: rabbitmq-exporter
          image: ghcr.io/kbudde/rabbitmq_exporter:1.0.0 # sidecar container for metrics
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: exporter
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
