manifests/base/microservices/rabbitmq/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    name: rabbitmq
